--- a/NSFW_text_finetuning.ipynb
+++ b/NSFW_text_finetuning.ipynb
@@ -119,8 +119,10 @@
     "\n",
     "split_index = len(data)*3//4\n",
     "\n",
-    "training: List[Tuple[str, bool]] = data[:split_index]\n",
-    "eval: List[Tuple[str, bool]] = data[split_index:]"
+    "training: List[Tuple[str, bool]] = data[:split_index][:3400]\n",
+    "eval: List[Tuple[str, bool]] = data[split_index:]\n",
+    "r.shuffle(training)\n",
+    "r.shuffle(eval)"
    ]
   },
   {
@@ -131,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "[(False, 8210), (True, 8101)]"
+       "[(True, 1685), (False, 1715)]"
       ]
      },
      "execution_count": 6,
@@ -277,7 +279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at D:\\Documents\\models\\base\\deberta-v3-large\\ and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at D:\\Documents\\models\\base\\deberta-v3-base\\ and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -287,47 +289,47 @@
        "DebertaV2ForSequenceClassification(\n",
        "  (deberta): DebertaV2Model(\n",
        "    (embeddings): DebertaV2Embeddings(\n",
-       "      (word_embeddings): Embedding(128100, 1024, padding_idx=0)\n",
-       "      (LayerNorm): LayerNorm((1024,), eps=1e-07, elementwise_affine=True)\n",
+       "      (word_embeddings): Embedding(128100, 768, padding_idx=0)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-07, elementwise_affine=True)\n",
        "      (dropout): StableDropout()\n",
        "    )\n",
        "    (encoder): DebertaV2Encoder(\n",
        "      (layer): ModuleList(\n",
-       "        (0-23): 24 x DebertaV2Layer(\n",
+       "        (0-11): 12 x DebertaV2Layer(\n",
        "          (attention): DebertaV2Attention(\n",
        "            (self): DisentangledSelfAttention(\n",
-       "              (query_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "              (key_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "              (value_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "              (query_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (key_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (value_proj): Linear(in_features=768, out_features=768, bias=True)\n",
        "              (pos_dropout): StableDropout()\n",
        "              (dropout): StableDropout()\n",
        "            )\n",
        "            (output): DebertaV2SelfOutput(\n",
-       "              (dense): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "              (LayerNorm): LayerNorm((1024,), eps=1e-07, elementwise_affine=True)\n",
+       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (LayerNorm): LayerNorm((768,), eps=1e-07, elementwise_affine=True)\n",
        "              (dropout): StableDropout()\n",
        "            )\n",
        "          )\n",
        "          (intermediate): DebertaV2Intermediate(\n",
-       "            (dense): Linear(in_features=1024, out_features=4096, bias=True)\n",
+       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
        "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): DebertaV2Output(\n",
-       "            (dense): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "            (LayerNorm): LayerNorm((1024,), eps=1e-07, elementwise_affine=True)\n",
+       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (LayerNorm): LayerNorm((768,), eps=1e-07, elementwise_affine=True)\n",
        "            (dropout): StableDropout()\n",
        "          )\n",
        "        )\n",
        "      )\n",
-       "      (rel_embeddings): Embedding(512, 1024)\n",
-       "      (LayerNorm): LayerNorm((1024,), eps=1e-07, elementwise_affine=True)\n",
+       "      (rel_embeddings): Embedding(512, 768)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-07, elementwise_affine=True)\n",
        "    )\n",
        "  )\n",
        "  (pooler): ContextPooler(\n",
-       "    (dense): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "    (dense): Linear(in_features=768, out_features=768, bias=True)\n",
        "    (dropout): StableDropout()\n",
        "  )\n",
-       "  (classifier): Linear(in_features=1024, out_features=2, bias=True)\n",
+       "  (classifier): Linear(in_features=768, out_features=2, bias=True)\n",
        "  (dropout): StableDropout()\n",
        ")"
       ]
@@ -363,7 +365,7 @@
    ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    f\"{MODEL_DIR}\\\\base\\\\deberta-v3-large\\\\\",\n",
+    "    f\"{MODEL_DIR}\\\\base\\\\deberta-v3-base\\\\\",\n",
     "    local_files_only=True\n",
     ")"
    ]
@@ -403,19 +405,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for batch in train_dataloader:\n",
     "    input_ids, attention_mask, labels = batch\n",
@@ -430,6 +420,23 @@
     "    optimizer.step()\n",
     "    lr_scheduler.step()\n",
     "    optimizer.zero_grad()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_pretrained(f\"{MODEL_DIR}\\\\fine_tuned\\\\deberta-v3-base-nsfw\\\\\", over_write=True)\n",
+    "tokenizer.save(f\"{MODEL_DIR}\\\\fine_tuned\\\\deberta-v3-base-nsfw\\\\tokenizer_config.json\", over_write=True)"
    ]
   },
   {
@@ -452,10 +459,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 0, 0, 0)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "model.eval()\n",
+    "model.to(device)\n",
+    "\n",
     "for text, label in eval:\n",
-    "    print(text, label)"
+    "    inputs = tokenizer.encode(\n",
+    "        text,\n",
+    "        add_special_tokens=True,\n",
+    "        max_length=512,\n",
+    "        padding='max_length',\n",
+    "        truncation=True,\n",
+    "        return_tensors='pt'\n",
+    "    )\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(inputs.to(device)).logits\n",
+    "\n",
+    "    prediction = logits.argmax().item()\n",
+    "\n",
+    "    match (label, prediction):\n",
+    "        case (True, 1):\n",
+    "            true_positive +=1\n",
+    "        case (True, 0):\n",
+    "            false_negative +=1\n",
+    "        case (False, 1):\n",
+    "            false_positive +=1\n",
+    "        case (False, 0):\n",
+    "            true_negative +=1\n",
+    "\n",
+    "true_positive, false_positive, true_negative, false_negative"
    ]
   }
  ],
