Updated finetuning juypter notebook

--- a/NSFW_text_finetuning.ipynb
+++ b/NSFW_text_finetuning.ipynb
@@ -91,7 +91,7 @@
     "    .map(lambda line: line.split(\",\"))\n",
     "    .filter(lambda line: len(line) > 3)\n",
     "    .map(lambda line: (\n",
-    "        \",\".join(line[:-2]),\n",
+    "        \",\".join(line[:-1]),\n",
     "        True if line[-1].strip().lower() == \"true\" else False\n",
     "    ))\n",
     "    .group_by(lambda line: line[1])\n",
@@ -119,7 +119,7 @@
     "\n",
     "split_index = len(data)*3//4\n",
     "\n",
-    "training: List[Tuple[str, bool]] = data[:split_index][:3400]\n",
+    "training: List[Tuple[str, bool]] = data[:split_index]\n",
     "eval: List[Tuple[str, bool]] = data[split_index:]\n",
     "r.shuffle(training)\n",
     "r.shuffle(eval)"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "[(True, 1685), (False, 1715)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "[(True, 2773), (False, 2664)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.save_pretrained(f\"{MODEL_DIR}\\\\fine_tuned\\\\deberta-v3-base-nsfw\\\\\", over_write=True)\n",
-    "tokenizer.save(f\"{MODEL_DIR}\\\\fine_tuned\\\\deberta-v3-base-nsfw\\\\tokenizer_config.json\", over_write=True)"
+    "# tokenizer.save(f\"{MODEL_DIR}\\\\fine_tuned\\\\deberta-v3-base-nsfw\\\\tokenizer_config.json\", over_write=True)"
    ]
   },
   {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,16 +457,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "We strongly recommend passing in an `attention_mask` since your input_ids may be padded. See https://huggingface.co/docs/transformers/troubleshooting#incorrect-output-when-padding-tokens-arent-masked.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(1, 0, 0, 0)"
+       "(290, 0, 2664, 2483)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
